Fixed grid pagination alignment

--- a/app/less/custom.less
+++ b/app/less/custom.less
@@ -715,7 +715,14 @@ button.btn-default.dim:active {
 
   .pagination {
       margin: 0;
-      margin-left: 15px;
+  }
+
+  .row {
+    .col {
+      .pagination {
+        margin-left: 15px;
+      }
+    }
   }
 
   .items-per-page {
